--- a/hw/m68k/Makefile.objs
+++ b/hw/m68k/Makefile.objs
@@ -1,5 +1,5 @@
-obj-y += an5206.o mcf5208.o
-obj-y += dummy_m68k.o
-obj-y += mac.o
+obj-$(CONFIG_COLDFIRE) += an5206.o mcf5208.o
+obj-$(CONFIG_COLDFIRE) += dummy_m68k.o
+obj-$(CONFIG_MAC) += mac.o
 
-obj-y += mcf5206.o mcf_intc.o
+obj-$(CONFIG_COLDFIRE) += mcf5206.o mcf_intc.o
